tests/baselines/reference/duplicateIdentifierRelatedSpans2.errors.txt
[96mtests/cases/compiler/file1.ts[0m:[93m1[0m:[93m1[0m - [91merror[0m[90m TS6200: [0mDefinitions of the following identifiers conflict with those in another file: A, B, C, D, E, F, G, H, I

[30;47m1[0m class A { }
[30;47m [0m [91m~~~~~[0m

  [96mtests/cases/compiler/file2.ts[0m:[93m1[0m:[93m1[0m
    [30;47m1[0m class A { }
    [30;47m [0m [96m~~~~~[0m
    Conflicts are in this file.
[96mtests/cases/compiler/file2.ts[0m:[93m1[0m:[93m1[0m - [91merror[0m[90m TS6200: [0mDefinitions of the following identifiers conflict with those in another file: A, B, C, D, E, F, G, H, I

[30;47m1[0m class A { }
[30;47m [0m [91m~~~~~[0m

  [96mtests/cases/compiler/file1.ts[0m:[93m1[0m:[93m1[0m
    [30;47m1[0m class A { }
    [30;47m [0m [96m~~~~~[0m
    Conflicts are in this file.


==== tests/cases/compiler/file1.ts (1 errors) ====
    class A { }
    ~~~~~
!!! error TS6200: Definitions of the following identifiers conflict with those in another file: A, B, C, D, E, F, G, H, I
    class B { }
    class C { }
    class D { }
    class E { }
    class F { }
    class G { }
    class H { }
    class I { }
==== tests/cases/compiler/file2.ts (1 errors) ====
    class A { }
    ~~~~~
!!! error TS6200: Definitions of the following identifiers conflict with those in another file: A, B, C, D, E, F, G, H, I
    class B { }
    class C { }
    class D { }
    class E { }
    class F { }
    class G { }
    class H { }
    class I { }
    